# take-home

./: Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
src/crypto/: base64.rs  encryptor.rs  hmac.rs  mod.rs  signer.rs
src/handlers/: encryption.rs  mod.rs  signing.rs
tests/: encryption_integration.rs  signing_integration.rs
