[package]
name = "take-home"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
hmac = "0.12.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
